alignment fixed

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -11,6 +11,7 @@
     left:0;
     font-size:10rem;
     opacity:.7;
+    overflow: hidden;
     -webkit-text-stroke-width:1px;
     -webkit-text-fill-color:transparent;
   
@@ -19,7 +20,7 @@
       opacity:.2;
       white-space: nowrap;
       top:20%;
-      left:-51%;
+      left:-55%;
       transform: rotate(-90deg);
     }
   
