--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -36,11 +36,6 @@
         left:-20%;
       }
 
-      /*@media screen and (min-width:800px) and (max-width: v.$smallScreen) {
-        left:-18%;
-        font-size:7rem;
-    }*/
-
     @media screen and (min-width:768px) and (max-width:1024px) {
       font-size:7rem;
       left:-25%;
@@ -53,7 +48,11 @@
   
       span {
         @include m.spacing;
-        left:60.5%;
+        left:60.5%;//overrides left in spacing mixin
+
+        @media screen and (max-width:v.$smallScreen) {
+          left:48%;
+        }
       }
   
     }
